--- a/src/main/resources/templates/ingredients/edit.html
+++ b/src/main/resources/templates/ingredients/edit.html
@@ -11,10 +11,10 @@
 <body>
     <th:block th:insert="~{fragments/navbar.html :: navbar}"></th:block>
 
-    <h1 class="m-2" th:text="'Editing pizza: '+${pizza.name}"></h1>
+    <h1 class="m-2" th:text="'Editing ingredient: '+${ingredient.name}"></h1>
 
-    <form class="row g-3 m-2" id="pizza-form" th:action="@{/edit/{id}(id = ${pizza.id})}" th:object="${pizza}"
-        method="post">
+    <form class="row g-3 m-2" id="ingredient-form" th:action="@{/ingredients/edit/{id}(id = ${ingredient.id})}"
+        th:object="${ingredient}" method="post">
 
         <div class="col-12">
             <label for="name" class="form-label">Name</label>
@@ -35,36 +35,6 @@
                 <ul>
                     <li th:each="error : ${#fields.errors('description')}" th:text="${error}"></li>
                 </ul>
-            </div>
-        </div>
-
-        <div class="col-12">
-            <label for="image_url" class="form-label">Image URL</label>
-            <input type="text" id="image_url" th:field="*{image_url}" class="form-control" maxlength="2048"
-                th:errorClass="is-invalid">
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('image_url')}">
-                <ul>
-                    <li th:each="error : ${#fields.errors('image_url')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12">
-            <label for="price" class="form-label">Price</label>
-            <input type="number" id="price" th:field="*{price}" class="form-control" min="0.01" step="any"
-                th:errorClass="is-invalid">
-            <div class="invalid-feedback" th:if="${#fields.hasErrors('price')}">
-                <ul>
-                    <li th:each="error : ${#fields.errors('price')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-12">
-            <div class="form-check" th:each="ingredient : ${ingredients}">
-                <label for="|ingredient-${ingredient.name}|" th:text="${ingredient.name}"></label>
-                <input type="checkbox" id="|ingredient-${ingredient.name}|" th:field="*{ingredients}"
-                    th:value="${ingredient.id}">
             </div>
         </div>
 
